# rpi_pico_cpp_template_pio

./: CMakeLists.txt  README.md
src/: main.cpp  template.pio
